Add test for imported libraries.
Change-Id: If837b22909130570fa6abbd619817ebf6b4c3ee3

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -31,3 +31,8 @@ if(ANDROID_ABI STREQUAL armeabi-v7a)
 	set_target_properties(neon_cpp_exe PROPERTIES
 		COMPILE_FLAGS "-DNEON -mfpu=neon")
 endif()
+
+add_library(missing SHARED IMPORTED)
+add_library(imported SHARED IMPORTED)
+set_target_properties(imported PROPERTIES
+	IMPORTED_LOCATION /fake/location/libimported.so)
