Silence unused -Wa argument warning from linking with clang.
CMake automatically forwards all compiler flags to the linker,
and clang doesn't like having -Wa flags being used for linking.

To prevent CMake from doing this would require meddling with the
CMAKE_<LANG>_COMPILE_OBJECT rules, which would get quite messy.

Bug: https://github.com/android-ndk/ndk/issues/171
Change-Id: I3295948db64d3459db3af7ba3f0d431689812f80
(cherry picked from commit 78eb716552a0b43c2fc36bebf8ad991e6c77dca9)

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,6 +4,9 @@ cmake_minimum_required(VERSION 3.6.0)
 if(CMAKE_NINJA_FORCE_RESPONSE_FILE)
 endif()
 
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror")
+
 add_library(c_shared SHARED shared/shared.c)
 add_library(c_static STATIC static/static.c)
 set(C_LIBRARIES c_shared c_static)
